--- a/starter_files/aml-pipelines-with-automated-machine-learning-step.ipynb
+++ b/starter_files/aml-pipelines-with-automated-machine-learning-step.ipynb
@@ -52,9 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "SDK version:  1.14.0\n"
+    }
+   ],
    "source": [
     "import logging\n",
     "import os\n",
@@ -75,7 +83,7 @@
     "from azureml.pipeline.steps import AutoMLStep\n",
     "\n",
     "# Check core SDK version number\n",
-    "print(\"SDK version:\", azureml.core.VERSION)"
+    "print(\"SDK version: \", azureml.core.VERSION)"
    ]
   },
   {
@@ -88,9 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "WARNING - Warning: Falling back to use azure cli login credentials.\nIf you run your code in unattended mode, i.e., where you can't give a user input, then we recommend to use ServicePrincipalAuthentication or MsiAuthentication.\nPlease refer to aka.ms/aml-notebook-auth for different authentication mechanisms in azureml-sdk.\nudacity-nd-proj\nudacity-nd\neastus\n04620c09-8b1c-444e-a2bb-bdc3a7107fcb\n"
+    }
+   ],
    "source": [
     "ws = Workspace.from_config()\n",
     "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep = '\\n')"
@@ -110,13 +126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Experiment(Name: udacity-bank-exp,\nWorkspace: udacity-nd-proj)",
+      "text/html": "<table style=\"width:100%\"><tr><th>Name</th><th>Workspace</th><th>Report Page</th><th>Docs Page</th></tr><tr><td>udacity-bank-exp</td><td>udacity-nd-proj</td><td><a href=\"https://ml.azure.com/experiments/udacity-bank-exp?wsid=/subscriptions/04620c09-8b1c-444e-a2bb-bdc3a7107fcb/resourcegroups/udacity-nd/workspaces/udacity-nd-proj\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.experiment.Experiment?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "# Choose a name for the run history container in the workspace.\n",
     "# NOTE: update these to match your existing experiment name\n",
-    "experiment_name = 'ml-experiment-1'\n",
+    "experiment_name = 'udacity-bank-exp'\n",
     "project_folder = './pipeline-project'\n",
     "\n",
     "experiment = Experiment(ws, experiment_name)\n",
@@ -135,9 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ComputeTargetException",
+     "evalue": "ComputeTargetException:\n\tMessage: Received bad response from Resource Provider:\nResponse Code: 500\nHeaders: {'Date': 'Mon, 28 Sep 2020 23:43:38 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Content-Length': '544', 'Connection': 'keep-alive', 'Request-Context': 'appId=cid-v1:2d2e8e63-272e-4b3c-8598-4ee570a0e70d', 'x-ms-response-type': 'error', 'x-ms-client-request-id': '09105458-fed3-4cb5-a59b-8295152deec9', 'x-ms-client-session-id': 'a1a0566d-0362-4bb8-ab28-9c848b71d287', 'x-request-time': '1.517', 'Strict-Transport-Security': 'max-age=15724800; includeSubDomains; preload'}\nContent: b'{\\n  \"error\": {\\n    \"code\": \"ServiceError\",\\n    \"severity\": null,\\n    \"message\": \"InternalServerError\",\\n    \"messageFormat\": null,\\n    \"messageParameters\": null,\\n    \"referenceCode\": null,\\n    \"detailsUri\": null,\\n    \"target\": null,\\n    \"details\": [],\\n    \"innerError\": null,\\n    \"debugInfo\": null\\n  },\\n  \"correlation\": {\\n    \"operation\": \"15684149cb360849a6275e3df2cba5cc\",\\n    \"request\": \"3ba702d37bc44d43\"\\n  },\\n  \"environment\": \"eastus\",\\n  \"location\": \"eastus\",\\n  \"time\": \"2020-09-28T23:43:38.1926055+00:00\",\\n  \"componentName\": \"account-rp\"\\n}'\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"Received bad response from Resource Provider:\\nResponse Code: 500\\nHeaders: {'Date': 'Mon, 28 Sep 2020 23:43:38 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Content-Length': '544', 'Connection': 'keep-alive', 'Request-Context': 'appId=cid-v1:2d2e8e63-272e-4b3c-8598-4ee570a0e70d', 'x-ms-response-type': 'error', 'x-ms-client-request-id': '09105458-fed3-4cb5-a59b-8295152deec9', 'x-ms-client-session-id': 'a1a0566d-0362-4bb8-ab28-9c848b71d287', 'x-request-time': '1.517', 'Strict-Transport-Security': 'max-age=15724800; includeSubDomains; preload'}\\nContent: b'{\\\\n  \\\"error\\\": {\\\\n    \\\"code\\\": \\\"ServiceError\\\",\\\\n    \\\"severity\\\": null,\\\\n    \\\"message\\\": \\\"InternalServerError\\\",\\\\n    \\\"messageFormat\\\": null,\\\\n    \\\"messageParameters\\\": null,\\\\n    \\\"referenceCode\\\": null,\\\\n    \\\"detailsUri\\\": null,\\\\n    \\\"target\\\": null,\\\\n    \\\"details\\\": [],\\\\n    \\\"innerError\\\": null,\\\\n    \\\"debugInfo\\\": null\\\\n  },\\\\n  \\\"correlation\\\": {\\\\n    \\\"operation\\\": \\\"15684149cb360849a6275e3df2cba5cc\\\",\\\\n    \\\"request\\\": \\\"3ba702d37bc44d43\\\"\\\\n  },\\\\n  \\\"environment\\\": \\\"eastus\\\",\\\\n  \\\"location\\\": \\\"eastus\\\",\\\\n  \\\"time\\\": \\\"2020-09-28T23:43:38.1926055+00:00\\\",\\\\n  \\\"componentName\\\": \\\"account-rp\\\"\\\\n}'\"\n    }\n}",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mComputeTargetException\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-8b86ba0162e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mcompute_target\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mComputeTarget\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mws\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mamlcompute_cluster_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompute_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mcompute_target\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwait_for_completion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshow_output\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmin_node_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout_in_minutes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;31m# For a more detailed view of current AmlCompute status, use get_status().\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\azureml\\core\\compute\\amlcompute.py\u001b[0m in \u001b[0;36mwait_for_completion\u001b[1;34m(self, show_output, min_node_count, timeout_in_minutes, is_delete_operation)\u001b[0m\n\u001b[0;32m    369\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    370\u001b[0m             \u001b[0mmin_nodes_reached\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout_reached\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterminal_state_reached\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstatus_errors_present\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 371\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wait_for_nodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin_node_count\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout_in_minutes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow_output\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    372\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mshow_output\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    373\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'AmlCompute wait for completion finished\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\azureml\\core\\compute\\amlcompute.py\u001b[0m in \u001b[0;36m_wait_for_nodes\u001b[1;34m(self, min_node_count, timeout_in_minutes, show_output)\u001b[0m\n\u001b[0;32m    413\u001b[0m         \u001b[1;33m:\u001b[0m\u001b[0mrtype\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    414\u001b[0m         \"\"\"\n\u001b[1;32m--> 415\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrefresh_state\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    416\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    417\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\azureml\\core\\compute\\amlcompute.py\u001b[0m in \u001b[0;36mrefresh_state\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    541\u001b[0m         \u001b[0mThis\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mprimarily\u001b[0m \u001b[0mused\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmanual\u001b[0m \u001b[0mpolling\u001b[0m \u001b[0mof\u001b[0m \u001b[0mcompute\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    542\u001b[0m         \"\"\"\n\u001b[1;32m--> 543\u001b[1;33m         \u001b[0mcluster\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAmlCompute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mworkspace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    544\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodified_on\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcluster\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodified_on\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    545\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprovisioning_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcluster\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprovisioning_state\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\azureml\\core\\compute\\compute.py\u001b[0m in \u001b[0;36m__new__\u001b[1;34m(cls, workspace, name)\u001b[0m\n\u001b[0;32m     68\u001b[0m         \"\"\"\n\u001b[0;32m     69\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mworkspace\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m             \u001b[0mcompute_payload\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mworkspace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcompute_payload\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m                 \u001b[0mcompute_type\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_payload\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'properties'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'computeType'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\azureml\\core\\compute\\compute.py\u001b[0m in \u001b[0;36m_get\u001b[1;34m(workspace, name)\u001b[0m\n\u001b[0;32m    284\u001b[0m                                          \u001b[1;34m'Response Code: {}\\n'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    285\u001b[0m                                          \u001b[1;34m'Headers: {}\\n'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 286\u001b[1;33m                                          'Content: {}'.format(resp.status_code, resp.headers, resp.content))\n\u001b[0m\u001b[0;32m    287\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    288\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mComputeTargetException\u001b[0m: ComputeTargetException:\n\tMessage: Received bad response from Resource Provider:\nResponse Code: 500\nHeaders: {'Date': 'Mon, 28 Sep 2020 23:43:38 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Content-Length': '544', 'Connection': 'keep-alive', 'Request-Context': 'appId=cid-v1:2d2e8e63-272e-4b3c-8598-4ee570a0e70d', 'x-ms-response-type': 'error', 'x-ms-client-request-id': '09105458-fed3-4cb5-a59b-8295152deec9', 'x-ms-client-session-id': 'a1a0566d-0362-4bb8-ab28-9c848b71d287', 'x-request-time': '1.517', 'Strict-Transport-Security': 'max-age=15724800; includeSubDomains; preload'}\nContent: b'{\\n  \"error\": {\\n    \"code\": \"ServiceError\",\\n    \"severity\": null,\\n    \"message\": \"InternalServerError\",\\n    \"messageFormat\": null,\\n    \"messageParameters\": null,\\n    \"referenceCode\": null,\\n    \"detailsUri\": null,\\n    \"target\": null,\\n    \"details\": [],\\n    \"innerError\": null,\\n    \"debugInfo\": null\\n  },\\n  \"correlation\": {\\n    \"operation\": \"15684149cb360849a6275e3df2cba5cc\",\\n    \"request\": \"3ba702d37bc44d43\"\\n  },\\n  \"environment\": \"eastus\",\\n  \"location\": \"eastus\",\\n  \"time\": \"2020-09-28T23:43:38.1926055+00:00\",\\n  \"componentName\": \"account-rp\"\\n}'\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"Received bad response from Resource Provider:\\nResponse Code: 500\\nHeaders: {'Date': 'Mon, 28 Sep 2020 23:43:38 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Content-Length': '544', 'Connection': 'keep-alive', 'Request-Context': 'appId=cid-v1:2d2e8e63-272e-4b3c-8598-4ee570a0e70d', 'x-ms-response-type': 'error', 'x-ms-client-request-id': '09105458-fed3-4cb5-a59b-8295152deec9', 'x-ms-client-session-id': 'a1a0566d-0362-4bb8-ab28-9c848b71d287', 'x-request-time': '1.517', 'Strict-Transport-Security': 'max-age=15724800; includeSubDomains; preload'}\\nContent: b'{\\\\n  \\\"error\\\": {\\\\n    \\\"code\\\": \\\"ServiceError\\\",\\\\n    \\\"severity\\\": null,\\\\n    \\\"message\\\": \\\"InternalServerError\\\",\\\\n    \\\"messageFormat\\\": null,\\\\n    \\\"messageParameters\\\": null,\\\\n    \\\"referenceCode\\\": null,\\\\n    \\\"detailsUri\\\": null,\\\\n    \\\"target\\\": null,\\\\n    \\\"details\\\": [],\\\\n    \\\"innerError\\\": null,\\\\n    \\\"debugInfo\\\": null\\\\n  },\\\\n  \\\"correlation\\\": {\\\\n    \\\"operation\\\": \\\"15684149cb360849a6275e3df2cba5cc\\\",\\\\n    \\\"request\\\": \\\"3ba702d37bc44d43\\\"\\\\n  },\\\\n  \\\"environment\\\": \\\"eastus\\\",\\\\n  \\\"location\\\": \\\"eastus\\\",\\\\n  \\\"time\\\": \\\"2020-09-28T23:43:38.1926055+00:00\\\",\\\\n  \\\"componentName\\\": \\\"account-rp\\\"\\\\n}'\"\n    }\n}"
+     ]
+    }
+   ],
    "source": [
     "from azureml.core.compute import AmlCompute\n",
     "from azureml.core.compute import ComputeTarget\n",
@@ -145,7 +188,7 @@
     "\n",
     "# NOTE: update the cluster name to match the existing cluster\n",
     "# Choose a name for your CPU cluster\n",
-    "amlcompute_cluster_name = \"auto-ml\"\n",
+    "amlcompute_cluster_name = \"bank-clust\"\n",
     "\n",
     "# Verify that cluster does not exist already\n",
     "try:\n",
@@ -624,9 +667,13 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1601335755956",
+   "display_name": "Python 3.6.8 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "538e5862d24b1a3e5ce3680bcbc1bfded8e90787fb231efa28bb458150bc0bcd"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -638,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.8-final"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
